--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#shoes">Shoes</a>
+                        <a class="nav-link" href="#shoes">Infant Milk</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#bag">Backpack</a>
+                        <a class="nav-link" href="#bag">Diaper</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#subscribe">Subscribe</a>
