--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ Aiwibi ডায়াপার সরবরাহ করে উচ্চ শো
     </main>
     <!-- footer start -->
     <footer>
-     <p class="text-center">©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
+     <p class="text-center">©2025. FB page: Wiwi Baby Mart. All rights reserved. Dhaka, Bangladesh.</p>
     </footer>
     <!-- js bootstrap bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
